# fitness-platform-analysis-backend

./: .env  Cargo.toml  data.json  power_curve.json
src/: db.rs  main.rs  power_curve.rs  structures.rs
