[package]
edition = "2021"
name = "analysis"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
fitparser = "0.6.1"
plotters = "0.3.5"
rayon = "1.8.1"
serde = {version = "1.0.196", features = ["derive"]}
